--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
-# These individuals contributed to the hbnb project in this repository 
+# These individuals contributed to the hbnb project in this repository
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Cynthia Anosike <anosikechioma28@gmail.com>
+Adejimi Aanuoluwa <aanuolwaff@gmail.com>
